fix overlapping svgs

--- a/assets/css/imperial-officer.css
+++ b/assets/css/imperial-officer.css
@@ -68,7 +68,6 @@ figure {
 	text-align: center;
 	vertical-align: top;
 	margin: 0 14px 20px;
-	max-width: 33%;
 }
 
 figure figcaption:first-child {
